--- a/package.json
+++ b/package.json
@@ -12,33 +12,43 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.35.5",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.63.0",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jwt-decode": "^3.1.2",
-    "lucide-react": "^0.378.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^6.23.1",
+    "lucide-react": "^0.469.0",
+    "react": "19",
+    "react-dom": "19",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.1",
+    "shadcn": "^2.1.8",
+    "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.62.16",
     "@types/node": "^20.12.11",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "19",
+    "@types/react-dom": "19",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
@@ -48,6 +58,6 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^6.0.7"
   }
 }
