--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -25,16 +28,19 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tanstack/react-query": "^5.63.0",
+    "@tanstack/react-query": "5.62.16",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.469.0",
     "react": "19",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "shadcn": "^2.1.8",
     "shadcn-ui": "^0.9.4",
@@ -42,7 +48,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.62.16",
+    "@tanstack/react-query-devtools": "5.62.16",
     "@types/node": "^20.12.11",
     "@types/react": "19",
     "@types/react-dom": "19",
