--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.469.0",
+    "quill": "^2.0.3",
     "react": "19",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1",
     "shadcn": "^2.1.8",
     "shadcn-ui": "^0.9.4",
