--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@popperjs/core": "^2.11.8",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -38,14 +40,17 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "quill": "^2.0.3",
     "react": "19",
     "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "19",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^7.1.1",
     "shadcn": "^2.1.8",
     "shadcn-ui": "^0.9.4",
@@ -54,6 +59,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "5.62.16",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20.12.11",
     "@types/react": "19",
     "@types/react-dom": "19",
